// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders className correctly 1`] = `
<button
  className="btn-addon btn"
  disabled={false}
  onClick={undefined}
>
  Click here
</button>
`;

exports[`Button renders correctly 1`] = `
<button
  className="btn"
  disabled={false}
  onClick={[Function]}
>
  Click here
</button>
`;

exports[`Button renders correctly 2`] = `
<button
  className="btn"
  disabled={false}
  onClick={[Function]}
>
  Click here
</button>
`;
